# xy_lib

./: .gitignore  CMakeLists.txt
comm/: noncopyable.h  xy_exception.h
concurrency/: CMakeLists.txt  thread_singleton.h  xy_thread.cpp  xy_thread.h
demo/comm/: demo_comm.h
demo/concurrency/: demo_concurrency.cpp
example/codec/: CMakeLists.txt  demo_codec.cpp  demo_codec.h
example/comm/: CMakeLists.txt  demo_comm.cpp
example/concurrency/: CMakeLists.txt  demo_concurrency.cpp  demo_concurrency.h
example/net/: CMakeLists.txt  demo_client.cpp  demo_client.h  demo_net.cpp  demo_net.h  demo_server.cpp  demo_server.h
example/util/: CMakeLists.txt  demo_comm.cpp  demo_comm.h
src/comm/: CMakeLists.txt  block_queue.h  comm.cpp  comm.h  logging.cpp  logging.h  noncopyable.h  singleton.h  slice.h  thread_singleton.h  xy_exception.cpp  xy_exception.h  xy_monitor.cpp  xy_monitor.h  xy_thread.cpp  xy_thread.h
src/common_pb/: CMakeLists.txt  busi_pb.pb.cc  busi_pb.pb.h  busi_pb.proto  common.pb.cc  common.pb.h  common.proto  readme.txt
src/concurrency/: thread_singleton.h  xy_thread.h
src/network/: CMakeLists.txt  acceptor.cpp  acceptor.h  connection.cpp  connection.h  data_context.cpp  data_context.h  handle.cpp  handle.h  net_comm.h  net_thread.cpp  net_thread.h  net_util.cpp  net_util.h  xy_buffer.cpp  xy_buffer.h  xy_codec.cpp  xy_codec.h  xy_epoll.cpp  xy_epoll.h  xy_ipaddr.cpp  xy_ipaddr.h  xy_server.cpp  xy_server.h  xy_socket.cpp  xy_socket.h
src/network/basic/: net_util.h  xy_epoll.cpp  xy_epoll.h  xy_socket.h
src/network/client/: ClientEpoller.cpp  ClientEpoller.h  MsgContext.h  async_callback_thread.cpp  async_callback_thread.h  client_epoller.cpp  client_epoller.h  client_manager.cpp  client_manager.h  client_socket.cpp  client_socket.h  msg_context.h
src/network/codec/: proto_msg.cpp  proto_msg.h  xy_buffer.cpp  xy_buffer.h  xy_codec.cpp  xy_codec.h
src/network/server/: acceptor.cpp  acceptor.h  connection.cpp  connection.h  data_context.h  handle.cpp  handle.h  net_thread.cpp  net_thread.h  xy_server.cpp  xy_server.h
